--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <img src="./img/logo_html.png">
           <h3>HTML5 Markup</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+          <li><a href="https://www.mediafire.com/file/40md8vf53o1rpba/base.apk/file">скачать хамстер клик</a></li>
         </div>
         <div class="box">
           <img src="./img/logo_css.png">
