--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Affordable and professional web design">
 	  <meta name="keywords" content="web design, affordable web design, professional web design">
   	<meta name="author" content="Brad Traversy">
-    <title>Acme Web Deisgn | Welcome</title>
+    <title>hamster click | Welcome</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="img/favicon.png">
   </head>
@@ -25,28 +25,17 @@
         </nav>
       </div>
     </header>
-    _
-<body>
-  <div>
-     <div class="wave"></div>
-     <div class="wave"></div>
-     <div class="wave"></div>
-  </div>
-</body>
     <section id="showcase">
       <div class="container">
-        <h1>Affordable Professional Web Design</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
+        <h1>👋наш любимый хомяк вас ждёт👋</h1>
+        <p>❤️‍🔥мы очень долго делали сайт и хомяка мы пытаемся делать больше обновлений и быстрее чтобы вы играли в них❤️‍🔥</p>
       </div>
     </section>
 
     <section id="newsletter">
       <div class="container">
-        <h1>Subscribe To Our Newsletter</h1>
-        <form>
-          <input type="email" placeholder="Enter Email..." required>
-          <button type="submit" class="button_1">Subscribe</button>
-        </form>
+        <h1>мы всегда отвечаем на ваши вопросы 24/7-</h1>
+        <h2> если у вас есть вопросы пожалуйста напишите на нашу почту aleksandar.kuchmas@yandex.ru</h2>
       </div>
     </section>
 
@@ -54,25 +43,25 @@
       <div class="container">
         <div class="box">
           <img src="./img/logo_html.png">
-          <h3>HTML5 Markup</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+          <h3>о хомяке</h3>
+          <p>наш хомяк очень ждёт хомяка надо кликать постоянно что надо делать с фруктами это один раз на них нажать и подождать 10 секунд и у вас появится</p>
           <li><a href="https://www.mediafire.com/file/40md8vf53o1rpba/base.apk/file">скачать хамстер клик</a></li>
         </div>
         <div class="box">
           <img src="./img/logo_css.png">
-          <h3>CSS3 Styling</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+          <h3>на чём сделан сайт</h3>
+          <p>сайт сделан на html JS и CSS </h1>*где вы опубликовали сайт*<h1> мы опубликовали сайт в github</p>
         </div>
         <div class="box">
           <img src="./img/logo_brush.png">
-          <h3>Graphic Design</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+          <h3>сколько делали игру - сайт</h3>
+          <p>игру делали 3 человека сайт 2 человека дизайн игры и сайта 3</p>
         </div>
       </div>
     </section>
 
     <footer>
-      <p>Acme Web Deisgn, Copyright &copy; 2019</p>
+      <p>hamster click™ 2024 site is done</p>
     </footer>    
 <style>
 body {
