--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="current"><a href="index.html">ГЛАВНАЯ СТРАНИЦА</a></li>
             <li><a href="about.html">О ПРЕДЛОЖЕНИИ</a></li>
             <li><a href="services.html">СЕРВИС</a></li>
-            <li><a href="promo.html">ПРОМОКОД</a></li>
+            <li><a href="new promo.html">ПРОМОКОД</a></li>
           </ul>
         </nav>
       </div>
