--- a/new promo.html
+++ b/new promo.html
@@ -11,12 +11,12 @@
           <div class="content">
             <h2>Hamster click</h2>
             <h1>300 <span>кликов хомяка</span></h1>
-            <p>Срок действия 2025</p>
+            <p>Срок действия 18 июля 2024</p>
           </div>
         </div>
         <div class="copy-button">
           <input id="copyvalue" type="text" readonly value="HAMSTERPROMO7891" />
-          <button onclick="copyIt()" class="copybtn">COPY</button>
+          <button onclick="copyIt()" class="copybtn"></button>
         </div>
       </div>
     </div>
